# hse_high_performance

maldebrot/: CMakeLists.txt
maldebrot/src/: maldebrot_multithread.cpp  maldebrot_singlethread.cpp
newton/: CMakeLists.txt
newton/src/: newton_multithread.cpp
